Add ReadCoils and ReadDiscreteInputs RPCs.
